--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,7 +9,9 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi (>=0.115.14,<0.116.0)",
-    "uvicorn (>=0.35.0,<0.36.0)"
+    "uvicorn (>=0.35.0,<0.36.0)",
+    "openai (>=1.93.0,<2.0.0)",
+    "python-dotenv (>=1.1.1,<2.0.0)"
 ]
 
 
